test auth and 2 collections added
